force-app/main/default/objects/Transition_to_Fulfillment__c/fields/TTF_Status__c.field-meta.xml
<CustomField>
    <fullName>TTF_Status__c</fullName>
    <label>TTF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Completed</fullName>
            </value>
            <value>
                <fullName>UW Completed</fullName>
            </value>
            <value>
                <fullName>Sales Submitted</fullName>
            </value>
            <value>
                <fullName>Sales Follow-up</fullName>
            </value>
            <value>
                <fullName>PT Approved</fullName>
            </value>
            <value>
                <fullName>Close Request</fullName>
            </value>
            <value>
                <fullName>Pending Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>