force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Type_of_Transfer_TADA_s__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Transfer_TADA_s__c</fullName>
    <label>Type of Transfer TADA&apos;s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>DCA</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>