force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Vision_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Vision_Carrier__c</fullName>
    <label>Vision Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>