force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Vision_New_carriers__c.field-meta.xml
<CustomField>
    <fullName>Vision_New_carriers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision New carriers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>