force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/Benefits_New_Plan.recordType-meta.xml
<RecordType>
    <fullName>Benefits_New_Plan</fullName>
    <active>true</active>
    <description>Benefits New Plan</description>
    <label>Benefits New Plan</label>
</RecordType>