force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/BenefitsBYB.recordType-meta.xml
<RecordType>
    <fullName>BenefitsBYB</fullName>
    <active>true</active>
    <description>Record Type for Benefits BYB</description>
    <label>Benefits BYB</label>
</RecordType>