force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/Care_New_Plan.recordType-meta.xml
<RecordType>
    <fullName>Care_New_Plan</fullName>
    <active>true</active>
    <label>Care New Plan</label>
</RecordType>