force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/Care_Renewal_Change.recordType-meta.xml
<RecordType>
    <fullName>Care_Renewal_Change</fullName>
    <active>true</active>
    <label>Care Renewal/Change</label>
</RecordType>