force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/Confirmation_Renewal_Change.recordType-meta.xml
<RecordType>
    <fullName>Confirmation_Renewal_Change</fullName>
    <active>true</active>
    <label>Confirmation Renewal/Change</label>
</RecordType>