force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/IA_New_Plan.recordType-meta.xml
<RecordType>
    <fullName>IA_New_Plan</fullName>
    <active>false</active>
    <label>IA New Plan</label>
</RecordType>