force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/IA_Renewal_Change.recordType-meta.xml
<RecordType>
    <fullName>IA_Renewal_Change</fullName>
    <active>false</active>
    <label>IA Renewal/Change</label>
</RecordType>