force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/Submission_New_Plan.recordType-meta.xml
<RecordType>
    <fullName>Submission_New_Plan</fullName>
    <active>true</active>
    <label>Submission New Plan</label>
</RecordType>