force-app/main/default/objects/Transition_to_Fulfillment__c/recordTypes/Submission_Renewal_Change.recordType-meta.xml
<RecordType>
    <fullName>Submission_Renewal_Change</fullName>
    <active>true</active>
    <label>Submission Renewal/Change</label>
</RecordType>