force-app/main/default/objects/Transition_to_Fulfillment__c/validationRules/Bulk_Deal_link_to_spreadsheet.validationRule-meta.xml
<ValidationRule>
    <fullName>Bulk_Deal_link_to_spreadsheet</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name=&apos;Payroll Transfer&apos;, ISPICKVAL( Bulk_Deal__c , &quot;Yes&quot;), ISBLANK( Link_to_Spreadsheet__c )  )</errorConditionFormula>
    <errorDisplayField>Link_to_Spreadsheet__c</errorDisplayField>
    <errorMessage>Please add the link to spreadsheet</errorMessage>
</ValidationRule>