force-app/main/default/objects/Transition_to_Fulfillment__c/validationRules/Lines_of_Coverage_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lines_of_Coverage_Required</fullName>
    <active>true</active>
    <description>If the record type is BOR and The Lines of Coverage/Comments Required? is yes, this must be completed.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Benefits_BoR&apos;,   
ISPICKVAL(Any_lines_of_coverage_staying_external__c, &quot;Y&quot;),
 ISBLANK( Additional_Comments_Lines_of_Coverage__c ) 

)</errorConditionFormula>
    <errorDisplayField>Additional_Comments_Lines_of_Coverage__c</errorDisplayField>
    <errorMessage>Please enter Additional Comments when customer has external lines of coverage</errorMessage>
</ValidationRule>