force-app/main/default/objects/Transition_to_Fulfillment__c/validationRules/TTF_is_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>TTF_is_Approved</fullName>
    <active>true</active>
    <description>Approved TTFs cannot be edited.</description>
    <errorConditionFormula>AND(
NOT($Permission.Payroll_Transfer_Exception_Override),
TEXT(TTF_Status__c) = &apos;PT Approved&apos;,
NOT(ISCHANGED(Intro_Notification_Sent__c)),
NOT(ISCHANGED(TTF_Status__c)),
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>This TTF is approved, for any edits please reach out to a Qualifier on Payroll Transfers</errorMessage>
</ValidationRule>